0.8/_sources/user-guide/general/exporting_results/examples/plot_exports_output_to_wandb.rst.txt

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "user-guide/general/exporting_results/examples/plot_exports_output_to_wandb.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        Click :ref:`here <sphx_glr_download_user-guide_general_exporting_results_examples_plot_exports_output_to_wandb.py>`
        to download the full example code

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_user-guide_general_exporting_results_examples_plot_exports_output_to_wandb.py:


Weights & Biases (wandb)
************************

In this guide, we will demonstrate how to export the Check's and the Suite's output to wandb.

This enables to view the exported results in wandb and compare the results you
receive with different parameters or model/data.

**Structure:**

* `Load Data <#load-data>`__
* `Run a Check <#run-a-check>`__
* `Export Check to wandb <#export-a-check-s-output-checkresult-to-wandb>`__
* `Export Suite to wandb <#exporting-a-suite-s-output-suiteresult-to-wandb>`__

.. GENERATED FROM PYTHON SOURCE LINES 20-22

Load Data
---------

.. GENERATED FROM PYTHON SOURCE LINES 22-28

.. code-block:: default


    from deepchecks.tabular.datasets.classification import iris

    train_dataset, test_dataset = iris.load_data()
    model = iris.load_fitted_model()








.. GENERATED FROM PYTHON SOURCE LINES 29-31

Run a Check
-----------

.. GENERATED FROM PYTHON SOURCE LINES 31-37

.. code-block:: default


    from deepchecks.tabular.checks import WholeDatasetDrift

    result = WholeDatasetDrift().add_condition_overall_drift_value_less_than(
    ).run(train_dataset, test_dataset, model)








.. GENERATED FROM PYTHON SOURCE LINES 38-40

Observe CheckResult Display and Value
-------------------------------------

.. GENERATED FROM PYTHON SOURCE LINES 40-43

.. code-block:: default


    result






.. raw:: html

    <div class="output_subarea output_html rendered_html output_result">
    <!--
        ~ ----------------------------------------------------------------------------
        ~ Copyright (C) 2021-2022 Deepchecks (https://www.deepchecks.com)
        ~
        ~ This file is part of Deepchecks.
        ~ Deepchecks is distributed under the terms of the GNU Affero General
        ~ Public License (version 3 or later).
        ~ You should have received a copy of the GNU Affero General Public License
        ~ along with Deepchecks.  If not, see <http://www.gnu.org/licenses/>.
        ~ ----------------------------------------------------------------------------
        ~
    -->
    <!DOCTYPE html>
    <html lang="en">
    <head>
        <meta charset="UTF-8">
        <title>Whole Dataset Drift</title>
        <style>
            body {
                font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Helvetica, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol';
                font-size: 1rem;
                line-height: 1.5;
                color: #212529;
                text-align: left;
                max-width: 1200px;
                margin: auto;
                background-color: white;
            }

            div.nbinput.container div.prompt *,
            div.nboutput.container div.prompt *,
            div.nbinput.container div.input_area pre,
            div.nboutput.container div.output_area pre,
            div.nbinput.container div.input_area .highlight,
            div.nboutput.container div.output_area .highlight {
                border: none;
                padding: 0;
                margin: 0;
                box-shadow: none;
            }

            div.nbinput.container > div[class*=highlight],
            div.nboutput.container > div[class*=highlight] {
                margin: 0;
            }

            div.nbinput.container div.prompt *,
            div.nboutput.container div.prompt * {
                background: none;
            }

            div.nboutput.container div.output_area .highlight,
            div.nboutput.container div.output_area pre {
                background: unset;
            }

            div.nboutput.container div.output_area div.highlight {
                color: unset;  /* override Pygments text color */
            }

            /* avoid gaps between output lines */
            div.nboutput.container div[class*=highlight] pre {
                line-height: normal;
            }

            /* input/output containers */
            div.nbinput.container,
            div.nboutput.container {
                display: -webkit-flex;
                display: flex;
                align-items: flex-start;
                margin: 0;
                width: 100%;
            }
            @media (max-width: 540px) {
                div.nbinput.container,
                div.nboutput.container {
                    flex-direction: column;
                }
            }

            /* input container */
            div.nbinput.container {
                padding-top: 5px;
            }

            /* last container */
            div.nblast.container {
                padding-bottom: 5px;
            }

            /* input prompt */
            div.nbinput.container div.prompt pre {
                color: #307FC1;
            }

            /* output prompt */
            div.nboutput.container div.prompt pre {
                color: #BF5B3D;
            }

            /* all prompts */
            div.nbinput.container div.prompt,
            div.nboutput.container div.prompt {
                width: 4.5ex;
                padding-top: 5px;
                position: relative;
                user-select: none;
            }

            div.nbinput.container div.prompt > div,
            div.nboutput.container div.prompt > div {
                position: absolute;
                right: 0;
                margin-right: 0.3ex;
            }

            @media (max-width: 540px) {
                div.nbinput.container div.prompt,
                div.nboutput.container div.prompt {
                    width: unset;
                    text-align: left;
                    padding: 0.4em;
                }
                div.nboutput.container div.prompt.empty {
                    padding: 0;
                }

                div.nbinput.container div.prompt > div,
                div.nboutput.container div.prompt > div {
                    position: unset;
                }
            }

            /* disable scrollbars on prompts */
            div.nbinput.container div.prompt pre,
            div.nboutput.container div.prompt pre {
                overflow: hidden;
            }

            /* input/output area */
            div.nbinput.container div.input_area,
            div.nboutput.container div.output_area {
                -webkit-flex: 1;
                flex: 1;
                overflow: auto;
            }
            @media (max-width: 540px) {
                div.nbinput.container div.input_area,
                div.nboutput.container div.output_area {
                    width: 100%;
                }
            }

            /* input area */
            div.nbinput.container div.input_area {
                border: 1px solid #e0e0e0;
                border-radius: 2px;
                /*background: #f5f5f5;*/
            }

            /* override MathJax center alignment in output cells */
            div.nboutput.container div[class*=MathJax] {
                text-align: left !important;
            }

            /* override sphinx.ext.imgmath center alignment in output cells */
            div.nboutput.container div.math p {
                text-align: left;
            }

            /* standard error */
            div.nboutput.container div.output_area.stderr {
                background: #fdd;
            }

            /* ANSI colors */
            .ansi-black-fg { color: #3E424D; }
            .ansi-black-bg { background-color: #3E424D; }
            .ansi-black-intense-fg { color: #282C36; }
            .ansi-black-intense-bg { background-color: #282C36; }
            .ansi-red-fg { color: #E75C58; }
            .ansi-red-bg { background-color: #E75C58; }
            .ansi-red-intense-fg { color: #B22B31; }
            .ansi-red-intense-bg { background-color: #B22B31; }
            .ansi-green-fg { color: #00A250; }
            .ansi-green-bg { background-color: #00A250; }
            .ansi-green-intense-fg { color: #007427; }
            .ansi-green-intense-bg { background-color: #007427; }
            .ansi-yellow-fg { color: #DDB62B; }
            .ansi-yellow-bg { background-color: #DDB62B; }
            .ansi-yellow-intense-fg { color: #B27D12; }
            .ansi-yellow-intense-bg { background-color: #B27D12; }
            .ansi-blue-fg { color: #208FFB; }
            .ansi-blue-bg { background-color: #208FFB; }
            .ansi-blue-intense-fg { color: #0065CA; }
            .ansi-blue-intense-bg { background-color: #0065CA; }
            .ansi-magenta-fg { color: #D160C4; }
            .ansi-magenta-bg { background-color: #D160C4; }
            .ansi-magenta-intense-fg { color: #A03196; }
            .ansi-magenta-intense-bg { background-color: #A03196; }
            .ansi-cyan-fg { color: #60C6C8; }
            .ansi-cyan-bg { background-color: #60C6C8; }
            .ansi-cyan-intense-fg { color: #258F8F; }
            .ansi-cyan-intense-bg { background-color: #258F8F; }
            .ansi-white-fg { color: #C5C1B4; }
            .ansi-white-bg { background-color: #C5C1B4; }
            .ansi-white-intense-fg { color: #A1A6B2; }
            .ansi-white-intense-bg { background-color: #A1A6B2; }

            .ansi-default-inverse-fg { color: #FFFFFF; }
            .ansi-default-inverse-bg { background-color: #000000; }

            .ansi-bold { font-weight: bold; }
            .ansi-underline { text-decoration: underline; }


            div.nbinput.container div.input_area div[class*=highlight] > pre,
            div.nboutput.container div.output_area div[class*=highlight] > pre,
            div.nboutput.container div.output_area div[class*=highlight].math,
            div.nboutput.container div.output_area.rendered_html,
            div.nboutput.container div.output_area > div.output_javascript,
            div.nboutput.container div.output_area:not(.rendered_html) > img{
                padding: 5px;
                margin: 0;
            }

            /* fix copybtn overflow problem in chromium (needed for 'sphinx_copybutton') */
            div.nbinput.container div.input_area > div[class^='highlight'],
            div.nboutput.container div.output_area > div[class^='highlight']{
                overflow-y: hidden;
            }

            /* hide copybtn icon on prompts (needed for 'sphinx_copybutton') */
            .prompt .copybtn {
                display: none;
            }

            /* Some additional styling taken form the Jupyter notebook CSS */
            div.rendered_html table {
            border: none;
            border-collapse: collapse;
            border-spacing: 0;
            color: black;
            font-size: 12px;
            table-layout: fixed;
            }
            div.rendered_html thead {
            border-bottom: 1px solid black;
            vertical-align: bottom;
            }
            div.rendered_html tr,
            div.rendered_html th,
            div.rendered_html td {
            text-align: right;
            vertical-align: middle;
            padding: 0.5em 0.5em;
            line-height: normal;
            white-space: normal;
            max-width: none;
            border: none;
            }
            div.rendered_html th {
            font-weight: bold;
            }
            div.rendered_html tbody tr:nth-child(odd) {
            background: #f5f5f5;
            }
            div.rendered_html tbody tr:hover {
            background: rgba(66, 165, 245, 0.2);
            }
        </style>
        <script>
            (!window.navigator.onLine ? alert('needs internet connection') : '');
        </script>
    </head>
    <body>
    
    <script src="" crossorigin="anonymous"></script>
    <script type="application/vnd.jupyter.widget-state+json">
    {
      "version_major": 2,
      "version_minor": 0,
      "state": {
        "7c4d5cad19764010909dbe37e0e09dfe": {
          "model_name": "VBoxModel",
          "model_module": "@jupyter-widgets/controls",
          "model_module_version": "1.5.0",
          "state": {
            "_dom_classes": [
              "rendered_html",
              "jp-RenderedHTMLCommon",
              "jp-RenderedHTML",
              "jp-OutputArea-output"
            ],
            "children": [
              "IPY_MODEL_fe80293d4b124fde922b336d7d2e12a9",
              "IPY_MODEL_b0d4f157bb5541e2936252900cfa8b36",
              "IPY_MODEL_d1539ce942e34571927e717d7bef2d7a",
              "IPY_MODEL_42d0047bf1a44ea388dcbf50b44eda5a"
            ],
            "layout": "IPY_MODEL_a936efcf151f449caae58c08e3106494"
          }
        },
        "fe80293d4b124fde922b336d7d2e12a9": {
          "model_name": "HTMLModel",
          "model_module": "@jupyter-widgets/controls",
          "model_module_version": "1.5.0",
          "state": {
            "_dom_classes": [],
            "layout": "IPY_MODEL_9ac6b1ea797e4a3fab9e5b82eb9af202",
            "style": "IPY_MODEL_289729fb0552424988809a97954e052f",
            "value": "<h4><b>Whole Dataset Drift</b></h4>"
          }
        },
        "9ac6b1ea797e4a3fab9e5b82eb9af202": {
          "model_name": "LayoutModel",
          "model_module": "@jupyter-widgets/base",
          "model_module_version": "1.2.0",
          "state": {}
        },
        "289729fb0552424988809a97954e052f": {
          "model_name": "DescriptionStyleModel",
          "model_module": "@jupyter-widgets/controls",
          "model_module_version": "1.5.0",
          "state": {}
        },
        "b0d4f157bb5541e2936252900cfa8b36": {
          "model_name": "HTMLModel",
          "model_module": "@jupyter-widgets/controls",
          "model_module_version": "1.5.0",
          "state": {
            "_dom_classes": [],
            "layout": "IPY_MODEL_3f8de8f3d4d5444d93400fbad7dd4b9e",
            "style": "IPY_MODEL_0e8fe27173364f51a03d9a516cdee331",
            "value": "<p>    Calculate drift between the entire train and test datasets using a model trained to distinguish between them.</p>"
          }
        },
        "3f8de8f3d4d5444d93400fbad7dd4b9e": {
          "model_name": "LayoutModel",
          "model_module": "@jupyter-widgets/base",
          "model_module_version": "1.2.0",
          "state": {}
        },
        "0e8fe27173364f51a03d9a516cdee331": {
          "model_name": "DescriptionStyleModel",
          "model_module": "@jupyter-widgets/controls",
          "model_module_version": "1.5.0",
          "state": {}
        },
        "d1539ce942e34571927e717d7bef2d7a": {
          "model_name": "HTMLModel",
          "model_module": "@jupyter-widgets/controls",
          "model_module_version": "1.5.0",
          "state": {
            "_dom_classes": [],
            "layout": "IPY_MODEL_3d705c67ce2048038461518a8286f296",
            "style": "IPY_MODEL_fbfead25f717449dbdf7f06a7470f84a",
            "value": "<h5><b>Conditions Summary</b></h5><style type=\"text/css\">\n#T_64244_ table {\n  text-align: left;\n  white-space: pre-wrap;\n}\n#T_64244_ thead {\n  text-align: left;\n  white-space: pre-wrap;\n}\n#T_64244_ tbody {\n  text-align: left;\n  white-space: pre-wrap;\n}\n#T_64244_ th {\n  text-align: left;\n  white-space: pre-wrap;\n}\n#T_64244_ td {\n  text-align: left;\n  white-space: pre-wrap;\n}\n</style>\n<table id=\"T_64244_\">\n  <thead>\n    <tr>\n      <th class=\"col_heading level0 col0\" >Status</th>\n      <th class=\"col_heading level0 col1\" >Condition</th>\n      <th class=\"col_heading level0 col2\" >More Info</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <td id=\"T_64244_row0_col0\" class=\"data row0 col0\" ><div style=\"color: green;text-align: center\">\u2713</div></td>\n      <td id=\"T_64244_row0_col1\" class=\"data row0 col1\" >Drift value is less than 0.25</td>\n      <td id=\"T_64244_row0_col2\" class=\"data row0 col2\" >Found drift value of: 0, corresponding to a domain classifier AUC of: 0.45</td>\n    </tr>\n  </tbody>\n</table>\n"
          }
        },
        "3d705c67ce2048038461518a8286f296": {
          "model_name": "LayoutModel",
          "model_module": "@jupyter-widgets/base",
          "model_module_version": "1.2.0",
          "state": {}
        },
        "fbfead25f717449dbdf7f06a7470f84a": {
          "model_name": "DescriptionStyleModel",
          "model_module": "@jupyter-widgets/controls",
          "model_module_version": "1.5.0",
          "state": {}
        },
        "42d0047bf1a44ea388dcbf50b44eda5a": {
          "model_name": "VBoxModel",
          "model_module": "@jupyter-widgets/controls",
          "model_module_version": "1.5.0",
          "state": {
            "_dom_classes": [],
            "children": [
              "IPY_MODEL_63181486e8f74791b933eb4901d693f5",
              "IPY_MODEL_804e7a7bbef442a2b438075fea3c2f33"
            ],
            "layout": "IPY_MODEL_ec52cd6d382f4c8daa359e738c853b39"
          }
        },
        "63181486e8f74791b933eb4901d693f5": {
          "model_name": "HTMLModel",
          "model_module": "@jupyter-widgets/controls",
          "model_module_version": "1.5.0",
          "state": {
            "_dom_classes": [],
            "layout": "IPY_MODEL_386bf7f8b6db48e5aa1384bf3e40bfef",
            "style": "IPY_MODEL_753356f8c081461c8b4424089bf28d79",
            "value": "<h5><b>Additional Outputs</b></h5>"
          }
        },
        "386bf7f8b6db48e5aa1384bf3e40bfef": {
          "model_name": "LayoutModel",
          "model_module": "@jupyter-widgets/base",
          "model_module_version": "1.2.0",
          "state": {}
        },
        "753356f8c081461c8b4424089bf28d79": {
          "model_name": "DescriptionStyleModel",
          "model_module": "@jupyter-widgets/controls",
          "model_module_version": "1.5.0",
          "state": {}
        },
        "804e7a7bbef442a2b438075fea3c2f33": {
          "model_name": "HTMLModel",
          "model_module": "@jupyter-widgets/controls",
          "model_module_version": "1.5.0",
          "state": {
            "_dom_classes": [],
            "layout": "IPY_MODEL_5d6ad73276f2461aab4336fd155529b7",
            "style": "IPY_MODEL_d1b3e32a683d40eb895b51301ce60ff6",
            "value": "<p><b>&#x2713;</b>Nothing to display</p>"
          }
        },
        "5d6ad73276f2461aab4336fd155529b7": {
          "model_name": "LayoutModel",
          "model_module": "@jupyter-widgets/base",
          "model_module_version": "1.2.0",
          "state": {}
        },
        "d1b3e32a683d40eb895b51301ce60ff6": {
          "model_name": "DescriptionStyleModel",
          "model_module": "@jupyter-widgets/controls",
          "model_module_version": "1.5.0",
          "state": {}
        },
        "ec52cd6d382f4c8daa359e738c853b39": {
          "model_name": "LayoutModel",
          "model_module": "@jupyter-widgets/base",
          "model_module_version": "1.2.0",
          "state": {}
        },
        "a936efcf151f449caae58c08e3106494": {
          "model_name": "LayoutModel",
          "model_module": "@jupyter-widgets/base",
          "model_module_version": "1.2.0",
          "state": {}
        }
      }
    }
    </script>
    <script type="application/vnd.jupyter.widget-view+json">
    {"version_major": 2, "version_minor": 0, "model_id": "7c4d5cad19764010909dbe37e0e09dfe"}
    </script>

    </body>
    </html>
    </div>
    <br />
    <br />

.. GENERATED FROM PYTHON SOURCE LINES 44-45

the value can be observed

.. GENERATED FROM PYTHON SOURCE LINES 45-47

.. code-block:: default

    result.value





.. rst-class:: sphx-glr-script-out

 Out:

 .. code-block:: none


    {'domain_classifier_auc': 0.4545454545454546, 'domain_classifier_drift_score': 0, 'domain_classifier_feature_importance': {'petal length (cm)': 1.0, 'sepal length (cm)': 0.0, 'sepal width (cm)': 0.0, 'petal width (cm)': 0.0}}



.. GENERATED FROM PYTHON SOURCE LINES 48-62

Export a Check's Output (CheckResult) to wandb
==============================================
Exporting the output to wandb is possible using the ``to_wandb`` function. This function
exports the check outputs to a wandb project.

The output display that will be export will be a bit different from what you usually
see. Only the tables and the plots are being exported.

On default if you export a single check to wandb without a wandb run active it will
create a project with the name deepchecks and the and the check's metadata in the
config and export the results there.

See Check to_wandb options
--------------------------

.. GENERATED FROM PYTHON SOURCE LINES 62-67

.. code-block:: default


    from deepchecks.core import CheckResult

    help(CheckResult.to_wandb)





.. rst-class:: sphx-glr-script-out

 Out:

 .. code-block:: none

    Help on function to_wandb in module deepchecks.core.check_result:

    to_wandb(self, dedicated_run: Optional[bool] = None, **kwargs)
        Send result to wandb.
    
        Parameters
        ----------
        dedicated_run : bool, default True
            whether to create a separate wandb run or not
            (deprecated parameter, does not have any effect anymore)
        kwargs: Keyword arguments to pass to wandb.init.
                Default project name is deepchecks.
                Default config is the check metadata (params, train/test/ name etc.).





.. GENERATED FROM PYTHON SOURCE LINES 68-69

To use this function you first need to login to your wandb account

.. GENERATED FROM PYTHON SOURCE LINES 69-74

.. code-block:: default


    import wandb

    wandb.login()





.. rst-class:: sphx-glr-script-out

 Out:

 .. code-block:: none


    False



.. GENERATED FROM PYTHON SOURCE LINES 75-78

.. code-block:: default


    result.to_wandb()





.. rst-class:: sphx-glr-script-out

 Out:

 .. code-block:: none

    wandb: Tracking run with wandb version 0.12.18
    wandb: W&B syncing is set to `offline` in this directory.  
    wandb: Run `wandb online` or set WANDB_MODE=online to enable cloud syncing.
    wandb: Waiting for W&B process to finish... (success).
    wandb: - 0.000 MB of 0.000 MB uploaded (0.000 MB deduped)    wandb: \ 0.000 MB of 0.000 MB uploaded (0.000 MB deduped)    wandb:                                                                                
    wandb: You can sync this run to the cloud by running:
    wandb: wandb sync /home/runner/work/deepchecks/deepchecks/docs/source/user-guide/general/exporting_results/wandb/offline-run-20220619_121538-2wd6bmq3
    wandb: Find logs at: ./wandb/offline-run-20220619_121538-2wd6bmq3/logs




.. GENERATED FROM PYTHON SOURCE LINES 79-89

Exporting a Suite's Output (SuiteResult) to wandb
=================================================
Run Suite and export to wandb
-----------------------------
Exporting a suite to wandb is the same as exporting a check. The display in wand
will have a section per check.

On default if you export a suite to wandb without a wandb run active it will create
a project with the name deepchecks and the suite's name in the config and send the
results there.

.. GENERATED FROM PYTHON SOURCE LINES 89-94

.. code-block:: default


    from deepchecks.tabular.suites import full_suite

    suite = full_suite()








.. GENERATED FROM PYTHON SOURCE LINES 95-99

.. code-block:: default


    suite_result = suite.run(train_dataset=train_dataset, test_dataset=test_dataset, model=model)
    suite_result.to_wandb()





.. rst-class:: sphx-glr-script-out

 Out:

 .. code-block:: none

    Full Suite:
    |                                    | 0/36 [00:00<?, ? Check/s]    Full Suite:
    |#                                   | 1/36 [00:00<00:08,  3.95 Check/s, Check=Performance Report]    Full Suite:
    |####                                | 4/36 [00:01<00:10,  3.13 Check/s, Check=Segment Performance]    Full Suite:
    |######                              | 6/36 [00:01<00:06,  4.69 Check/s, Check=Simple Model Comparison]Default parameter min_samples_leaf will change in version 2.6.See https://github.com/scikit-learn-contrib/category_encoders/issues/327
    Default parameter smoothing will change in version 2.6.See https://github.com/scikit-learn-contrib/category_encoders/issues/327
    Full Suite:
    |#######                             | 7/36 [00:01<00:06,  4.77 Check/s, Check=Model Error Analysis]       Full Suite:
    |#############                       | 13/36 [00:01<00:01, 12.39 Check/s, Check=Model Inference Time]    Full Suite:
    |#######################             | 23/36 [00:01<00:00, 26.20 Check/s, Check=Feature Label Correlation Change]    Full Suite:
    |############################        | 28/36 [00:02<00:00, 22.48 Check/s, Check=Special Characters]                  Full Suite:
    |####################################| 36/36 [00:02<00:00, 29.11 Check/s, Check=Feature Label Correlation]                                                                                                                          wandb: Tracking run with wandb version 0.12.18
    wandb: W&B syncing is set to `offline` in this directory.  
    wandb: Run `wandb online` or set WANDB_MODE=online to enable cloud syncing.
    wandb: Waiting for W&B process to finish... (success).
    wandb: - 0.000 MB of 0.000 MB uploaded (0.000 MB deduped)    wandb: \ 0.000 MB of 0.000 MB uploaded (0.000 MB deduped)    wandb:                                                                                
    wandb: You can sync this run to the cloud by running:
    wandb: wandb sync /home/runner/work/deepchecks/deepchecks/docs/source/user-guide/general/exporting_results/wandb/offline-run-20220619_121546-2lfciik3
    wandb: Find logs at: ./wandb/offline-run-20220619_121546-2lfciik3/logs




.. GENERATED FROM PYTHON SOURCE LINES 100-101

You can also set all the kwargs the wandb.init will get:

.. GENERATED FROM PYTHON SOURCE LINES 101-103

.. code-block:: default


    suite_result.to_wandb(project='my-suite-project', config={'suite-name': 'full-suite'})




.. rst-class:: sphx-glr-script-out

 Out:

 .. code-block:: none

    wandb: Tracking run with wandb version 0.12.18
    wandb: W&B syncing is set to `offline` in this directory.  
    wandb: Run `wandb online` or set WANDB_MODE=online to enable cloud syncing.
    wandb: Waiting for W&B process to finish... (success).
    wandb: - 0.000 MB of 0.000 MB uploaded (0.000 MB deduped)    wandb: \ 0.000 MB of 0.000 MB uploaded (0.000 MB deduped)    wandb:                                                                                
    wandb: You can sync this run to the cloud by running:
    wandb: wandb sync /home/runner/work/deepchecks/deepchecks/docs/source/user-guide/general/exporting_results/wandb/offline-run-20220619_121551-c1ms79v0
    wandb: Find logs at: ./wandb/offline-run-20220619_121551-c1ms79v0/logs





.. rst-class:: sphx-glr-timing

   **Total running time of the script:** ( 0 minutes  21.267 seconds)


.. _sphx_glr_download_user-guide_general_exporting_results_examples_plot_exports_output_to_wandb.py:


.. only :: html

 .. container:: sphx-glr-footer
    :class: sphx-glr-footer-example



  .. container:: sphx-glr-download sphx-glr-download-python

     :download:`Download Python source code: plot_exports_output_to_wandb.py <plot_exports_output_to_wandb.py>`



  .. container:: sphx-glr-download sphx-glr-download-jupyter

     :download:`Download Jupyter notebook: plot_exports_output_to_wandb.ipynb <plot_exports_output_to_wandb.ipynb>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
